# FlappyBird

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/include/: World.hpp
core/src/: World.cpp
flappy/: CMakeLists.txt  README.md  agent  main.cpp  train_headless.cpp  vision  vision.cpp
flappy/core/include/: Random.hpp
flappy/core/src/: World.cpp
flappy/objects/include/: Body.hpp
flappy/objects/src/: Obstacle.cpp
flappy/population/include/: Agent.hpp  Population.hpp
flappy/population/src/: Agent.cpp  Brain.cpp  Population.cpp
objects/include/: Body.hpp  Obstacle.hpp  Vector2.hpp
objects/src/: Body.cpp  Obstacle.cpp  Vector2.cpp
population/include/: Brain.hpp
population/src/: Agent.cpp
